# ChangeLog for app-admin/permwatcher
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Jan 2015; Johann Schmitz <ercpe@gentoo.org> permwatcher-0.1.1.ebuild:
  Updated homepage

  24 Nov 2014; Johann Schmitz <ercpe@gentoo.org> -permwatcher-0.1.ebuild:
  New ebuild for permwatcher