@@ -1,1 +1,1 @@
-DIST permwatcher-0.1.1.tar.gz 10237 SHA256 d4c68a16a92a929ec0b3dde49708e60a3bcc3679147522089d7681e9a6ea95c1 SHA512 2b498e177845292555485726ebf872fe7b57b36e9fc5cc841a72282454e84c5a497725cc0d227e00edfe44eef00d7d486590154a64ec9b5fbf28741acc86bdcf WHIRLPOOL 1de6bfc40951953221092bedbdc2ad2541c6e62755220968769a955f69c5f95b7f037b59682414943ce1d6fb39a391cf5dc2bf5d48e593862342ed64fbc57926
+DIST permwatcher-0.1.1.tar.gz 10299 SHA256 56c15e372228ea04f6c7b16cca6793488e894ee419b30e02c0b4d28e6047e319 SHA512 4acc17acc1e882c16dfa68ae321a783e6ae844b731ae5bfaac6187ca0f4741cbe0a8c31b6efc0692d8be8ff69440d4367673e24b0dd9bfa6df24832fb1b39805 WHIRLPOOL dd4e5698e0069d37bcd94439eb51c49cc98a8cbbd39d455f5bca2ed0b4e94295ec5eb080acb8e9df99fc15767d2afaaf57f76845c0aa5a41c1744504d584207a
