@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  15 Feb 2015; Johann Schmitz <ercpe@gentoo.org> permwatcher-0.1.1.ebuild:
+  Updated SRC_URI of permwatcher
+
   17 Jan 2015; Johann Schmitz <ercpe@gentoo.org> permwatcher-0.1.1.ebuild:
   Updated homepage
 
